[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stohler-news-agent"
version = "0.1.0"
description = "Agente para coletar notícias por tema e publicar no X duas vezes ao dia."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "feedparser>=6.0.12",
  "python-dotenv>=1.1.1",
  "requests>=2.32.5",
  "tweepy>=4.16.0",
]

[project.scripts]
news-agent = "news_agent.runner:main"

[tool.setuptools.packages.find]
include = ["news_agent*"]
